# metamorph

./: .gitignore  LICENSE  README.md  conversions.py  formats.json  formats.py  metamorph.py  pyproject.toml  requirements.txt  utils.py
mm/: __init__.py  __main__.py  cli.py  conversions.py  dependencies.py  formats.py  utils.py
